--- a/GamothequeWPF/MainWindow.xaml
+++ b/GamothequeWPF/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="jeu">Null</TextBox>
+        <TextBox x:Name="path" Margin="0,29,0,0">Null</TextBox>
     </Grid>
 </Window>
