--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -1,48 +1,17 @@
-﻿<Window x:Class="GamothequeWPF.MainWindow"
+﻿<Window x:Class="GamothequeWPF.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GamothequeWPF"
-        xmlns:vm="clr-namespace:GamothequeWPF.ViewModel"
+        xmlns:local="clr-namespace:GamothequeWPF.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Window.DataContext>
-        <vm:MainWindowViewModel/>
-    </Window.DataContext>
-
     <Grid>
-        <TextBlock Grid.Row="1">Liste des médias</TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150px" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        // mettre une autre grid
 
-        <Grid>
-            <TextBlock Text = "Titre" Width = "100" Margin = "119,40,573,-30"/>
-            <TextBlock Text = "Terminer" Width = "100" Margin = "224,40,468,360"/>
-        </Grid>
-
-        <Grid Grid.Row="3">
-            <ItemsControl ItemsSource = "{Binding Path = AllGames, Mode=OneWay}" Margin="10,60,-10,-33">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation = "Horizontal">
-                            <TextBlock x:Name="id" Text = "{Binding Path = Id}" Width = "100" Margin = "3 5 3 5"/>
-                            <TextBlock Text = "{Binding Path = Name}" Width = "100" Margin = "3 5 3 5"/>
-                            <CheckBox IsEnabled="False" IsChecked = "{Binding Path = Done}" Width = "100" Margin = "0 5 3 5"/>
-                            <Button Command="{Binding DataContext.DeleteGame, RelativeSource={RelativeSource AncestorType=ItemsControl}}" CommandParameter="{Binding Path=Id}">[|||]</Button>
-                            <!--<Button></Button>-->
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </Grid>
-
-        <Grid Margin="654,389,0,0">
-            <TextBox Margin="-646,-10,646,10" Text="{Binding Path= NameNewGame}"></TextBox>
-            <CheckBox Margin="-491,-10,491,10" IsChecked="{Binding Path= FinishedNewGame}"></CheckBox>
-            <Button Content="Ajouter" Command="{Binding Path=NewGame}" Margin="-452,-10,452,10"/>
-        </Grid>
-
-
-        <!--<TextBox x:Name="jeu" Text="{Binding Path= }"></TextBox>
-        <TextBox x:Name="path" Margin="0,29,0,0"></TextBox>-->
     </Grid>
 </Window>
