--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -11,7 +11,24 @@
             <ColumnDefinition Width="150px" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        // mettre une autre grid
-
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Button>Ajouter un jeu</Button>
+            <GridSplitter ResizeDirection="Rows" Grid.Row="1" Height="5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0"/>
+            <Button Grid.Row="2">-- Tous--</Button>
+            <Button Grid.Row="3">RPG</Button>
+            <Button Grid.Row="4">Immersive sim</Button>
+            <Button Grid.Row="5">MMORPG</Button>
+        </Grid>
+        <Grid Grid.ColumnSpan="2" Margin="150,0,0,0">
+            
+        </Grid>
     </Grid>
 </Window>
