--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -3,14 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GamothequeWPF.Views"
+        xmlns:local="clr-namespace:GamothequeWPF"
+        xmlns:vm="clr-namespace:GamothequeWPF.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150px" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
@@ -20,15 +26,25 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
+            
             <Button>Ajouter un jeu</Button>
             <GridSplitter ResizeDirection="Rows" Grid.Row="1" Height="5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0"/>
-            <Button Grid.Row="2">-- Tous--</Button>
-            <Button Grid.Row="3">RPG</Button>
+            <Grid Grid.Row="2">
+                <ItemsControl ItemsSource = "{Binding Path = TypeList, Mode=OneWay}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button Content = "{Binding Path = Name}"></Button>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </Grid>
+            <!--<Button Grid.Row="3">RPG</Button>
             <Button Grid.Row="4">Immersive sim</Button>
-            <Button Grid.Row="5">MMORPG</Button>
+            <Button Grid.Row="5">MMORPG</Button>-->
         </Grid>
+        
         <Grid Grid.ColumnSpan="2" Margin="150,0,0,0">
-            
         </Grid>
+        
     </Grid>
 </Window>
