--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="GamothequeWPF.MainWindow"
+﻿<Window x:Class="GamothequeWPF.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -28,11 +28,18 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation = "Horizontal">
-                            <TextBlock x:Name="id" Text = "{Binding Path = Id}" Width = "100" Margin = "3 5 3 5"/>
+                            <TextBlock Text = "{Binding Path = Id}" Width = "100" Margin = "3 5 3 5"/>
                             <TextBlock Text = "{Binding Path = Name}" Width = "100" Margin = "3 5 3 5"/>
                             <CheckBox IsEnabled="False" IsChecked = "{Binding Path = Done}" Width = "100" Margin = "0 5 3 5"/>
                             <Button Command="{Binding DataContext.DeleteGame, RelativeSource={RelativeSource AncestorType=ItemsControl}}" CommandParameter="{Binding Path=Id}">[|||]</Button>
-                            <!--<Button></Button>-->
+                            <ItemsControl ItemsSource="{Binding Path= gameTypes, Mode=Oneway}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Button Content="{Binding Path=Type.Name}" Command="{Binding DataContext.GetGamesByType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" CommandParameter="{Binding Path=Type}"></Button>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                                <!--<Button></Button>-->
                         </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
