--- a/GamothequeWPF/App.xaml
+++ b/GamothequeWPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GamothequeWPF"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/GameListView.xaml">
     <Application.Resources>
          
     </Application.Resources>
