--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:GamothequeWPF.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
+
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
@@ -16,33 +16,32 @@
             <ColumnDefinition Width="150px" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            
-            <Button>Ajouter un jeu</Button>
-            <GridSplitter ResizeDirection="Rows" Grid.Row="1" Height="5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0"/>
-            <Grid Grid.Row="2">
-                <ItemsControl ItemsSource = "{Binding Path = TypeList, Mode=OneWay}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Button Content = "{Binding Path = Name}"></Button>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+
+                <Button>Ajouter un jeu</Button>
+                <GridSplitter ResizeDirection="Rows" Grid.Row="1" Height="5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0"/>
+                <Grid Grid.Row="2">
+                    <Button>-- Tous --</Button>
+                </Grid>
+                <Grid Grid.Row="3">
+                    <ItemsControl ItemsSource = "{Binding Path = TypeList, Mode=OneWay}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Button Content = "{Binding Path = Name}"></Button>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </Grid>
             </Grid>
-            <!--<Button Grid.Row="3">RPG</Button>
-            <Button Grid.Row="4">Immersive sim</Button>
-            <Button Grid.Row="5">MMORPG</Button>-->
-        </Grid>
-        
+        </ScrollViewer>
+
         <Grid Grid.ColumnSpan="2" Margin="150,0,0,0">
         </Grid>
         
