--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -25,10 +25,10 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
-                <Button>Ajouter un jeu</Button>
+                <Button Command="{Binding ChangePage}" CommandParameter="NewGame">Ajouter un jeu</Button>
                 <GridSplitter ResizeDirection="Rows" Grid.Row="1" Height="5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0"/>
                 <Grid Grid.Row="2">
-                    <Button>-- Tous --</Button>
+                    <Button Command="{Binding ChangePage}" CommandParameter="GameList">-- Tous --</Button>
                 </Grid>
                 <Grid Grid.Row="3">
                     <ItemsControl ItemsSource = "{Binding Path = TypeList, Mode=OneWay}">
@@ -43,6 +43,9 @@
         </ScrollViewer>
 
         <Grid Grid.ColumnSpan="2" Margin="150,0,0,0">
+            <Frame Source="{Binding Path=PageView, Mode=TwoWay}">
+                
+            </Frame>
         </Grid>
         
     </Grid>
