--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -23,14 +23,16 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
                 <Button Command="{Binding ChangePage}" CommandParameter="NewGame">Ajouter un jeu</Button>
+                
                 <GridSplitter ResizeDirection="Rows" Grid.Row="1" Height="5" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0"/>
-                <Grid Grid.Row="2">
+                <Grid Grid.Row="3">
                     <Button Command="{Binding ChangePage}" CommandParameter="GameList">-- Tous --</Button>
                 </Grid>
-                <Grid Grid.Row="3">
+                <Grid Grid.Row="4">
                     <ItemsControl ItemsSource = "{Binding Path = TypeList, Mode=OneWay}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
@@ -39,6 +41,8 @@
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
                 </Grid>
+
+                <Button Grid.Row="2" Command="{Binding ChangePage}" CommandParameter="Statistic">Statistique</Button>
             </Grid>
         </ScrollViewer>
 
