--- a/GamothequeWPF/Views/GameDetailsView.xaml
+++ b/GamothequeWPF/Views/GameDetailsView.xaml
@@ -8,15 +8,16 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="GameDetailsView"
-      Background="White">
-    
+      Background="White" ShowsNavigationUI="False">
+
     <Page.DataContext>
         <vm:GameDetailsViewModel/>
     </Page.DataContext>
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="10,10,-10,20">
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
@@ -47,49 +48,49 @@
                     <Label Content="Nom du jeu"/>
                 </Grid>
                 <Grid Grid.Row="3">
-                    <TextBox Text="{Binding Path=Name}"/>
+                    <TextBox Text="{Binding Path=SelectedGame.Name}"/>
                 </Grid>
                 <Grid Grid.Row="4">
                     <Label Content="Jeu fait"/>
                 </Grid>
                 <Grid Grid.Row="5">
-                    <CheckBox Content="{Binding Path=Done}"/>
+                    <CheckBox Content="{Binding Path=SelectedGame.Done}"/>
                 </Grid>
                 <Grid Grid.Row="6">
                     <Label Content="Synopsis"/>
                 </Grid>
                 <Grid Grid.Row="7">
-                    <TextBox Text="{Binding Path=Synopsis}"/>
+                    <TextBox Text="{Binding Path=SelectedGame.Synopsis}"/>
                 </Grid>
                 <Grid Grid.Row="8">
                     <Label Content="PEGI"/>
                 </Grid>
                 <Grid Grid.Row="9">
-                    <TextBox Text="{Binding Path=MinimumAge}"/>
+                    <TextBox Text="{Binding Path=SelectedGame.MinimumAge}"/>
                 </Grid>
                 <Grid Grid.Row="10">
                     <Label Content="Support physique"/>
                 </Grid>
                 <Grid Grid.Row="11">
-                    <CheckBox Content="{Binding Path=PhysicalSupport}"/>
+                    <CheckBox Content="{Binding Path=SelectedGame.PhysicalSupport}"/>
                 </Grid>
                 <Grid Grid.Row="12">
                     <Label Content="Support numérique"/>
                 </Grid>
                 <Grid Grid.Row="13">
-                    <CheckBox Content="{Binding Path=DigitalSupport}"/>
+                    <CheckBox Content="{Binding Path=SelectedGame.DigitalSupport}"/>
                 </Grid>
                 <Grid Grid.Row="14">
                     <Label Content="Avis"/>
                 </Grid>
                 <Grid Grid.Row="15">
-                    <TextBox Text="{Binding Path=Review}"/>
+                    <TextBox Text="{Binding Path=SelectedGame.Review}"/>
                 </Grid>
                 <Grid Grid.Row="16">
                     <Label Content="Note"/>
                 </Grid>
                 <Grid Grid.Row="17">
-                    <ComboBox Text="Choisir une note...">
+                    <ComboBox Text="Choisir une note..." SelectedItem="{Binding Path=SelectedGame.Mark, Mode=TwoWay}">
                         <ComboBoxItem>1</ComboBoxItem>
                         <ComboBoxItem>2</ComboBoxItem>
                         <ComboBoxItem>3</ComboBoxItem>
@@ -102,27 +103,69 @@
                 </Grid>
                 <Grid Grid.Row="19">
                     <!--ATTENTION CA DECONNE-->
-                    <ComboBox Text="Choisir un type...">
-                        <ItemsControl ItemsSource = "{Binding Path = TypeList, Mode=OneWay}">
-                            <ItemsControl.ItemTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="50px" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Grid>
+                            <ListBox ItemsSource = "{Binding Path=RemovedTypes , NotifyOnSourceUpdated=True}" SelectedItem="{Binding Path=SelectedRemovedType, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Name}"></TextBlock>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                        </Grid>
+
+
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <Button Grid.Row="1" Command="{Binding Path=AddType}">Add</Button>
+                            <Button Command="{Binding Path=RemoveType}">Remove</Button>
+                        </Grid>
+
+                        <ListBox ItemsSource="{Binding Path=AddedTypes, NotifyOnSourceUpdated=True}" SelectedItem="{Binding Path=SelectedAddedType,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Column="2">
+                            <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <ComboBoxItem Content="{Binding Path=Name}"></ComboBoxItem>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding Name}"></TextBlock>
+                                    </StackPanel>
                                 </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </ComboBox>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </Grid>
+
                 </Grid>
                 <Grid Grid.Row="20">
                     <Label Content="Date de sortie"/>
                 </Grid>
                 <Grid Grid.Row="21">
-                    <TextBox Text="{Binding Path=ReleaseDate}"/>
+                    <TextBox Text="{Binding Path=SelectedGame.ReleaseDate}"/>
                 </Grid>
                 <Grid Grid.Row="22">
                     <Label Content="Durée de vie"/>
                 </Grid>
-                <Grid Grid.Row="23">
-                    <TextBox Text="{Binding Path=ExpectedDuration}"/>
+                <Grid Grid.Row="23" Margin="0,0,0,10">
+                    <TextBox Text="{Binding Path=SelectedGame.ExpectedDuration}"/>
+                </Grid>
+                <Grid Grid.Row="24">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="1" Command="{Binding SaveGame}" Content="Sauvegarder"/>
+                    <!--<Button Grid.Column="3" Command="{Binding Cancel}" Content="Annuler"/>-->
                 </Grid>
             </Grid>
         </ScrollViewer>
