--- a/GamothequeWPF/Views/StyleView.xaml
+++ b/GamothequeWPF/Views/StyleView.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:GamothequeWPF.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800" Background="White"
-      Title="StyleView" ShowsNavigationUI="False">
+      Title="StyleView">
     <Page.DataContext>
         <vm:StyleViewModel/>
     </Page.DataContext>
