--- a/GamothequeWPF/Views/MainWindow.xaml
+++ b/GamothequeWPF/Views/MainWindow.xaml
@@ -42,7 +42,7 @@
                 
             </Frame>
         </Grid>
-        <Button FontFamily="Marlett" FontSize="20" Content="3"
+        <Button VerticalAlignment="Top" FontFamily="Marlett" FontSize="20" Content="3"
                 Visibility="{Binding HideMenuButton}"
                 Command="{Binding ChangeShowMenuButton}"
                 Height="25" Width="25" Grid.Column="1">
@@ -60,7 +60,7 @@
                 </EventTrigger>
             </Button.Triggers>
         </Button>
-        <Button FontFamily="Marlett" FontSize="20" Content="4"
+        <Button VerticalAlignment="Top"  FontFamily="Marlett" FontSize="20" Content="4"
                 Visibility="{Binding Path=ShowMenuButton, Converter={StaticResource VisibleIfTrueConverter} }"
                 Command="{Binding ChangeShowMenuButton}"
                 Height="25" Width="25" Grid.Column="1">
